public/default.css
@font-face {
    font-family: 'Lexend Deca';
    src: url('./font/LexendDeca-Regular.ttf');
}

:root {
    --color-background: hsl(0, 0%, 0%);
    --color-text-default: hsl(0, 0%, 90%);
    --color-card-background: hsl(0, 0%, 10%);
    --color-accent: hsl(210, 64%, 26%);
    --color-state-normal:hsl(123, 91%, 27%);
    --color-state-warning: hsl(46, 81%, 30%);
    --color-state-danger: hsl(0, 70%, 35%);
    --small: .2em;
    --normal: .4em;
    --medium: .6em;
    --large: .8em;
    --xlarge: 1em;
    --font-family-default: 'Lexend Deca', sans-serif;
    --font-size-default: 20px;
    --device-name-font-size: 1.7em;
    --device-status-font-size: 1.1em;
}

.color-state-normal{
    background-color: var(--color-state-normal) !important;
}

.color-state-warning{
    background-color: var(--color-state-warning) !important;
}

.color-state-danger{
    background-color: var(--color-state-danger) !important;
}

.addition{
    order: 9999;
}

.hidden{
    display: none !important;
    transition: 1s;
}

/* init */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently
                        supported by Chrome and Opera */
}

body {
    background-color: var(--color-background);
    color: var(--color-text-default);
    font-family: var(--font-family-default);
    font-size: var(--font-size-default);
}

.loading-holder{
    width: 100vw;
    height: 100vh;
    position: fixed;
    background-color: hsla(0, 0%, 10%, 0.95);
}

.loading-full{
    position: absolute;
    top: 50vh;
    left: 50vw;
    transform: translate(-50%, -50%);
    display: flex;
    align-items: center;
    gap: var(--medium);
}

.loading-full h3{
    font-size: var(--large);
    font-weight: lighter;
}

/* loading spinner */
.lds-ripple {
    display: inline-block;
    position: relative;
    width: 70px;
    height: 70px;
  }
  .lds-ripple div {
    position: absolute;
    border: 4px solid #fff;
    opacity: 1;
    border-radius: 50%;
    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
  }
  .lds-ripple div:nth-child(2) {
    animation-delay: -0.5s;
  }
  @keyframes lds-ripple {
    0% {
      top: 36px;
      left: 36px;
      width: 0;
      height: 0;
      opacity: 1;
    }
    100% {
      top: 0px;
      left: 0px;
      width: 72px;
      height: 72px;
      opacity: 0;
    }
  }
}

